 
## Bug Fixes

### General

 * No more silent errors when importing Carbon on Windows 2012 R2.
 
### Certificates

 * [Get-Certificate](http://get-carbon.org/help/Get-Certificate.html) fails when passed a relative path.
 
### File System

 * [Install-Junction](http://get-carbon.org/help/Install-Junction.html) fails when target path is hidden.
 * [Test-NtfsCompression](http://get-carbon.org/help/Test-NtfsCompression.html) fails when file/directory is hidden.
 * [Test-PathIsJunction](http://get-carbon.org/help/Test-PathIsJunction.html) fails when tested directory is hidden.

### Security

 * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html) fails when item is hidden.
 * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html) doesn't handle non-existent paths, causing cascading errors.
 * [Test-Permission](http://get-carbon.org/help/Test-Permission.html) always returns `$false` when testing leaf-level permissions and the `ApplyTo` parameter is provided, i.e. it doesn't ignore inheritance/propagation flags on leaves.

# 1.6.0 (1 February 2014)

## Bug Fixes

### File System

 * [Remove-Junction](http://get-carbon.org/help/Remove-Junction.html) doesn't delete a junction when given a relative path to the junction.
 
### Services

 * [Install-Service](http://get-carbon.org/help/Install-Service.html) doesn't properly resolve a service's path.
 
### Shares

 * Fixed [Install-SmbShare](http://get-carbon.org/help/Install-SmbShare.html) example to use correct syntax. [#111.](https://bitbucket.org/splatteredbits/carbon/issue/111)

## Enhancements

### Hosts File

 * Created [Remove-HostsEntry](http://get-carbon.org/help/Remove-HostsEntry.html) function for removing hostnames from a hosts file.

### IIS

 * Created [Join-IisVirtualPath](http://get-carbon.org/help/Join-IisVirtualPath.html) for joining paths used by the IIS APIs.